# projeto-ozempic-seguro

./: .gitignore  README.md  pyproject.toml
scripts/: reset_admin.py
src/ozempic_seguro/: config.py  main.py
src/ozempic_seguro/controllers/: __init__.py  navigation_controller.py
src/ozempic_seguro/core/: __init__.py  base_views.py  cache.py  exceptions.py  logger.py  structured_logger.py  theme.py  validators.py
src/ozempic_seguro/repositories/: __init__.py  audit_repository.py  connection.py  database.py  gaveta_repository.py  interfaces.py  reset_database.py  security.py  security_logger.py  user_repository.py
src/ozempic_seguro/services/: __init__.py  audit_service.py  audit_view_service.py  auth_service.py  gaveta_service.py  service_factory.py  timer_control_service.py  user_management_service.py  user_registration_service.py  user_service.py
src/ozempic_seguro/session/: __init__.py  login_attempts.py  session_manager.py  timer_manager.py
src/ozempic_seguro/views/: base_frame.py  base_user_view.py  components.py  gaveta_state_manager.py  iniciar_sessao_view.py  login_view.py  repositor_view.py  tecnico_view.py  vendedor_view.py
src/ozempic_seguro/views/components/: __init__.py  buttons.py  common.py  dialogs.py  gavetas.py  keyboard.py  layouts.py  loading.py
src/ozempic_seguro/views/pages_adm/: admin_gavetas_view.py  auditoria_view.py  cadastro_usuario_view.py  controle_timer_view.py  diagnostico_view.py  gerenciamento_usuarios_view.py  historico_view.py  painel_administrador_view.py  parametro_sistemas_view.py  usuarios_view.py
src/ozempic_seguro/views/pages_iniciais/: tela_logo_view.py  tela_toque_view.py
tests/: test_audit_repository.py  test_audit_service.py  test_audit_view_service.py  test_auth_service.py  test_user_management_service.py  test_user_registration_service.py  test_views.py
